tests/invalid/indentation5.nt
# invalid indentation
ingredients:
  > green chilies
    > red chilies
